--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,8 +5,7 @@ compatibility_date = "2024-01-01"
 command = "cd frontend && npm install && npm run build"
 publish = "frontend/build"
 
-[site]
-bucket = "./frontend/build"
+pages_build_output_dir = "frontend/build"
 
 # Routes for SPA
 [[redirects]]
@@ -15,4 +14,4 @@ to = "/index.html"
 status = 200
 
 [env.production]
-vars = { VITE_API_URL = "http://marketplace-api.eba-hekvtpzv.us-east-2.elasticbeanstalk.com" }
+vars = { REACT_APP_API_URL = "https://marketplace-api.eba-hekvtpzv.us-east-2.elasticbeanstalk.com" }
