Updated interface to include data and be more responsive

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
 # REACT_APP_API_URL=https://marketplace-api.eba-hekvtpzv.us-east-2.elasticbeanstalk.com 
-REACT_APP_API_URL=http://localhost:5107/api
+REACT_APP_API_URL=https://marketplace-api.jackschuld.com/api
